# ETHLondon2024

./: README.md
demo/: package-lock.json  package.json
demo/src/lib/components/: eurotaxisimulator.svelte
demo/src/routes/: +page.svelte  transaction.js
duber/: Cargo.toml
duber/src/: lib.rs
trajectory-enforcer/: Cargo.toml  deployement.sh
trajectory-enforcer/src/: lib.rs
